src/test/deca/codegen/invalid/divisionFlotent.deca
/* Description:
    Tester une division par zero (des flotent)

    Historique:
      cree le 16/01/2020
    Sortie attendu:


*/
{
	float z;
  z = 5.6/0.0;
}
